force-app/main/default/objects/Employee_Leave_Allowance__c/Employee_Leave_Allowance__c.object-meta.xml
<CustomObject>
    <label>Employee Leave Allowance</label>
    <nameField>
        <label>Employee Leave Allowances Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Leave Allowance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>