force-app/main/default/objects/Employee_Leave_Allowance__c/fields/Available_Maternity_Leave__c.field-meta.xml
<CustomField>
    <fullName>Available_Maternity_Leave__c</fullName>
    <formula>Total_Maternity_Leave__c -  Used_Maternity_Leave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Maternity Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>