force-app/main/default/objects/Employee_Leave_Allowance__c/fields/Available_Sick_Leave__c.field-meta.xml
<CustomField>
    <fullName>Available_Sick_Leave__c</fullName>
    <formula>Total_Sick_Leave__c -  Used_Sick_Leave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Sick Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>