force-app/main/default/objects/Employee_Leave_Allowance__c/fields/Total_Earned_Leave__c.field-meta.xml
<CustomField>
    <fullName>Total_Earned_Leave__c</fullName>
    <defaultValue>00</defaultValue>
    <label>Total Earned Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>