force-app/main/default/objects/Employee_Leave_Allowance__c/fields/Used_Maternity_Leave__c.field-meta.xml
<CustomField>
    <fullName>Used_Maternity_Leave__c</fullName>
    <defaultValue>00</defaultValue>
    <label>Used Maternity Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>