force-app/main/default/objects/Employee_Leave_Allowance__c/listViews/All_Leave_Allowance.listView-meta.xml
<ListView>
    <fullName>All_Leave_Allowance</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Available_Casual_Leave__c</columns>
    <columns>Used_Casual_Leave__c</columns>
    <columns>Available_Earned_Leave__c</columns>
    <columns>Used_Earned_Leave__c</columns>
    <columns>Used_Sick_Leave__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leave Allowance</label>
</ListView>